--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,8 @@ jobs:
 
       - name: Install Qt
         uses: jurplel/install-qt-action@v4
+        with:
+          version: '5.15.2'
           
       # Сборка через CMake
       - run: cmake -B build -DPATCH_VERSION=${{ github.run_number }}
